<resources>
    <string name="app_name">Dalua Ecosystem</string>
    <string name="hello_blank_fragment">Hello Home fragment</string>
    <string name="welcome_to_dalua">Welcome to the\nDalua Ecosystem</string>
    <string name="status_connected"><b>Status:- </b>Connected</string>
    <string name="status_disconnected"><b>Status:- </b>DisConnected</string>
    <string name="don_t_have_account_sign_up">Don\'t have an account? <b><font fgcolor='#5DBCFF'>Sign up</font></b></string>
    <string name="don_t_have_account_login">Already have an account? <b><font fgcolor='#5DBCFF'>Login</font></b></string>
    <string name="we_sent_a_code" formatted="true">We sent a code at </string>
    <string name="title_activity_change_advanc3">ChangeAdvanc3Activity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="time_picker_title">Time</string>
    <string name="time_picker_suffix"></string>
    <string name="time_picker_prefix"></string>
    <string name="time_picker_positive_btn_txt">Done</string>
    <string name="we_are_looking_for">We are looking for nearby bluetooth devices. Please make sure your device is turned on and in bluetooth range.</string>
    <string name="no_device_found">Don\'t see your device? Try rescanning</string>
    <string name="discovering_devices">Discovering Devices</string>
    <string name="rescan">Rescan</string>
    <string name="discovering_dalua_ecosystem">Discovering Dalua Ecosystem</string>
    <string name="delete_aquarium_message">Are you sure you want to delete this aquarium?</string>
    <string name="lost_schedule_data_message">You will lose your Schedule Data. Are you sure you want to go back?</string>
    <string name="delete_device_message">Are you sure you want to delete this device?</string>
    <string name="delete">Delete</string>
    <string name="delete_group_message">Are you sure you want to delete this group?</string>
    <string name="logout_message">Are you sure you want to logout your account?</string>
    <string name="logout">Logout</string>
    <string name="configuring_network">Configuring Network</string>
    <string name="this_may_take_a_few_moments">This may take a few moments</string>
    <string name="device_pairing">Device Pairing</string>
    <string name="registering_with_dalua_cloud">Registering on Cloud</string>
    <string name="hang_tight_we_are_almost_there">Hang tight! We\'re almost there.</string>
    <string name="all_done">All Done</string>
    <string name="congratulations_your_device_has_been_successfully_added_to_your_dalua_ecosystem">Congratulations, your device has been successfully added to your Dalua Ecosystem</string>
    <string name="pairing_dalua_device_message">Hang tight! we are connecting to your new Dalua device. This may take a few moments</string>
    <string name="pairing_failed">Pairing failed</string>
    <string name="pairing_dalua_device_failed_message">Looks like something went wrong. Please try again.</string>
    <string name="pairing">Pairing</string>
    <string name="searching_for_dalua_devices">Searching for Dalua devices</string>
    <string name="scan_completed">Scan Complete</string>
    <string name="device_name">Device Name</string>
    <string name="please_choose_a_unique_name_for_the_schedule">Please choose a unique name for the schedule</string>
    <string name="enter_device_name">Device Name</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="lorem_ipsum_fact_that_a_reader_will_be_distracted_by_the_readable_content">Lorem Ipsum fact that a reader will be distracted by the readable content.</string>
    <string name="retry">Retry</string>
    <string name="wifi">Wi-Fi</string>
    <string name="in_order_to_list_networks_please_turn_on_wifi">In order to list networks, please turn on Wi-Fi.</string>
    <string name="turn_on">Turn on</string>
    <string name="rename">Rename</string>
    <string name="device_move_to_group_message">Are you sure you want to move " %1$s " to %2$s? you can still remove from inside of the Group.</string>
    <string name="update">Update</string>
    <string name="un_group">UnGroup Device</string>
    <string name="un_group_dialog_message">Are you sure you want to remove this device from group?</string>
    <string name="yes">Yes</string>
    <string name="delete_device">Delete Device</string>
    <string name="delete_group">Delete group</string>
    <string name="message">Message</string>
    <string name="title">Title</string>
    <string name="rename_device">Rename device</string>
    <string name="rename_group">Rename group</string>
    <string name="schedule_control">Schedule Control</string>
    <string name="instant_control">Instant Control</string>
    <string name="devices">Devices</string>
    <string name="oops_there_are_no_devices_in_this_group">Oops! there are no devices in this Group.</string>
    <string name="click_the_button_below_to_start_adding_new_devices">Click the below button to start adding new devices.</string>
    <string name="add_new_device">Add new Device</string>
    <string name="create_my_own">Create My Own</string>
    <string name="_100">100</string>
    <string name="_80">80</string>
    <string name="_60">60</string>
    <string name="_40">40</string>
    <string name="_20">20</string>
    <string name="_0">0</string>
    <string name="_04_00">04:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="ramp_time">Ramp Time</string>
    <string name="dalua_default">Dalua Default</string>
    <string name="quick_play">Quick Play</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="geo_nlocation">Geo\nLocation</string>
    <string name="save_amp_upload"><![CDATA[Save & Upload]]></string>
    <string name="is_your_uploaded_schedule">\u0020is your uploaded Schedule</string>
    <string name="presets">Presets</string>
    <string name="groups">Groups</string>
    <string name="oops_there_are_no_devices_in_this_aquarium">There are no devices in the aquarium. Click on the button below to add devices</string>
    <string name="add_device">Add Device</string>
    <string name="no_devices">No Devices</string>
    <string name="wifi_colon">Wi-Fi:</string>
    <string name="dalua_bb">DALUA-BB</string>
    <string name="network_setup">Network Setup</string>
    <string name="available_network">Available Networks</string>
    <string name="android_os_have_put_restriction_on_number_of_scans_nandroid_app_can_scan_for_wifi_four_times_in_a_2_minute_period">Android OS have put restriction on number of scans.\nAndroid app can scan for Wi-Fi four times in a 2-minute period</string>
    <string name="selected_country">"Selected Country: %1$s"</string>
    <string name="create_aquarium">Create Aquarium</string>
    <string name="to_start_using_the_dalua_app_please_create_your_first_aquarium_by_clicking_the_button_below">To start using the dalua app, please create your first aquarium by clicking the button below.</string>
    <string name="lets_get_started">Let\'s get started!</string>
    <string name="aquariums">Aquariums</string>
    <string name="dialog">Dialog</string>
    <string name="email">Email</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="anthony_dalua_gmail_com">anthony_dalua@gmail.com</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="tank_size">Tank Size</string>
    <string name="select_tank_size">Select Tank Size</string>
    <string name="country">Country</string>
    <string name="upload_schedules">Upload Schedules</string>
    <string name="_1">1</string>
    <string name="smart_nuv">Smart UV</string>
    <string name="sapphire_nblue">Sapphire Blue</string>
    <string name="broad_ndaylight">Broad Daylight</string>
    <string name="_08_00">08:00</string>
    <string name="start_time">Start Time</string>
    <string name="_12_00">12:00</string>
    <string name="end_time">End Time</string>
    <string name="progression">Progression</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="in_this_feature_lights_will_set_at_lowest_setting_nto_simulate_moonlight">In this feature lights will set at lowest setting to simulate moonlight.</string>
    <string name="warning">Warning!</string>
    <string name="update_and_upload"><![CDATA[Update & Upload]]></string>
    <string name="master_control">Master Control</string>
    <string name="advance">Advanced</string>
    <string name="easy">Easy</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="centigrade">°C</string>
    <string name="sunset">Sunset</string>
    <string name="master_ncontrol">Master\nControl</string>
    <string name="temperature">Temperature</string>
    <string name="location">Location</string>
    <string name="weather_ncondition">Weather\nCondition</string>
    <string name="geo_location">Geo Location</string>
    <string name="uploaded">Uploaded</string>
    <string name="preview">Preview</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not-Connected</string>
    <string name="my_aquariums">My Aquariums</string>
    <string name="select_ramptime">Select Ramptime</string>
    <string-array name="timeArray">
        <item>01:00</item>
        <item>02:00</item>
        <item>03:00</item>
        <item>04:00</item>
        <item>05:00</item>
        <item>06:00</item>
    </string-array>
    <string-array name="tankSize">
        <item>Nano</item>
        <item>3\'</item>
        <item>4\'</item>
        <item>5\'</item>
        <item>6\'</item>
        <item>Monster</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="new_group">New Group</string>
    <string name="_123code">+123</string>
    <string name="phone_number">Phone Number</string>
    <string name="shared_aquarium">Shared Aquarium</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="what_is_your_device_type">What is your device type?</string>
    <string name="saltwater">Saltwater</string>
    <string name="freshwater">Freshwater</string>
    <string name="done">Done</string>
    <string name="schedule_name">Schedule Name</string>
    <string name="what_do_you_want_to_name_your_aquarium">What do you want to name your aquarium?</string>
    <string name="lobby_aquarium">Lobby Aquarium</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="please_turn_on_your_bluetooth_to_add_your_device">Please turn on your bluetooth to add your device.</string>
    <string name="enter_a_name_for_your_schedule">Enter a name for your schedule</string>
    <string name="schedule_saved">Schedule Saved</string>
    <string name="share_schedule_as_public">Share schedule as Public</string>
</resources>