<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:minWidth="@dimen/_200sdp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_7sdp"
    app:cardElevation="@dimen/cardview_default_elevation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_device_type"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/saltwaterCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saltwater"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/_12sdp" />

            <RadioButton
                android:id="@+id/freshwaterCheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/freshwater"
                android:textColor="@color/text_color_gray"
                android:textSize="@dimen/_12sdp" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/doneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/btn_blu_white_txt"
            android:text="@string/done"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>

