<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_25sdp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_13sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="@dimen/_5sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_save_image" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_2sdp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/schedule_saved"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/enter_a_name_for_your_schedule"
            android:textColor="@color/text_secondary_color"
            android:textSize="@dimen/_10sdp" />

        <EditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/edt_grey_view"
            android:fontFamily="@font/open_sans_regular"
            android:hint="@string/schedule_name"
            android:inputType="textCapSentences"
            android:maxLength="@integer/maxInputLength"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/icon_hint_clr"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/share_schedule_as_public"
                android:textColor="@color/black"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/isPublicSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:thumb="@drawable/switch_thumb_selector"
                app:track="@drawable/switch_track_selector" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_blue_txt"
                android:padding="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/selected_blue_dot_color"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_blu_white_txt"
                android:padding="@dimen/_5sdp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>