<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/_13sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_7sdp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/bluetooth"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_regular"
            android:gravity="center"
            android:text="@string/please_turn_on_your_bluetooth_to_add_your_device"
            android:textColor="@color/text_secondary_color"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_white_blue_txt"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/selected_blue_dot_color" />

            <View
                android:layout_width="@dimen/_15sdp"
                android:layout_height="0dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/turnOn"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_38sdp"
                android:background="@drawable/btn_blu_white_txt"
                android:text="@string/turn_on"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>