<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_10sdp"
    app:cardElevation="@dimen/cardview_default_elevation"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_10sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="center"
            android:text="@string/create_aquarium"
            android:textColor="@color/text_color_message_blc"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/what_do_you_want_to_name_your_aquarium"
            android:textColor="@color/text_secondary_color"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/edt_grey_view"
            android:fontFamily="@font/open_sans_regular"
            android:hint="@string/lobby_aquarium"
            android:inputType="textCapSentences"
            android:maxEms="12"
            android:maxLength="@integer/maxInputLength"
            android:padding="@dimen/_7sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/icon_hint_clr"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_white_blue_txt"
                android:padding="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/selected_blue_dot_color"
                android:textSize="@dimen/_12sdp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_weight="1"
                android:background="@drawable/btn_blu_white_txt"
                android:padding="@dimen/_5sdp"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>